--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -54,15 +54,17 @@
     <script type="module" src="{{ url_for('static', filename='js/createCard.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/tableInteractions.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/cardsInteractions.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/receiptsInteractions.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/homePage.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/userStore.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/tableState.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/workersState.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/receiptsState.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/sortingDropdown.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/searchWithFilter.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/defaultSearch.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/changePassword.js') }}"></script>
-
+    <script type="module" src="{{ url_for('static', filename='js/changePassword.js') }}"></script>
     
     
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.5/dist/cdn.min.js"></script>
