--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -50,6 +50,7 @@
     <script type="module" src="{{ url_for('static', filename='js/navbar.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/loginHandler.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/dropdownSearch.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/dropdownGoodsSearch.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/createRow.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/createCard.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/tableInteractions.js') }}"></script>
@@ -64,7 +65,7 @@
     <script type="module" src="{{ url_for('static', filename='js/searchWithFilter.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/defaultSearch.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/changePassword.js') }}"></script>
-    <script type="module" src="{{ url_for('static', filename='js/changePassword.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/addReceipt.js') }}"></script>
     
     
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.5/dist/cdn.min.js"></script>
