--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -66,6 +66,7 @@
     <script type="module" src="{{ url_for('static', filename='js/defaultSearch.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/changePassword.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/addReceipt.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/numberSpinner.js') }}"></script>
     
     
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.5/dist/cdn.min.js"></script>
