--- a/app/templates/pages/receipts.html
+++ b/app/templates/pages/receipts.html
@@ -78,7 +78,7 @@
         </div>
 
         <div x-data="addReceipt(user)" id="add-receipt-modal" data-modal-backdrop="static" tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
-            <div class="relative p-4 w-full max-w-xl max-h-full">
+            <div class="relative p-4 w-full max-w-2xl max-h-full">
                 <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
                     <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
                         <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
@@ -93,7 +93,7 @@
                     </div>
                     <div class="p-4 md:p-5">
                         <form>
-                            <div class="w-full max-w-lg">
+                            <div class="w-full">
                                 <div class="rounded-lg shadow-lg p-12 text-xs sm:mx-0 bg-white border border-gray-200 dark:bg-gray-800 dark:border-gray-700">
                                 <div>
                                     <div class="flex flex-col">
@@ -109,7 +109,7 @@
                                         </h1>
                                     
                                         <div class="flex flex-row justify-between">
-                                            <span class="text-gray-600 dark:text-gray-200 text-xs">Cashier ID: 000001</span>
+                                            <span class="text-gray-600 dark:text-gray-200 text-xs" x-text="'Cashier ID: ' + user.ID"></span>
                                             <span class="text-gray-600 dark:text-gray-200 text-xs">Customer ID: 000001</span>
                                         </div>
                 
@@ -119,10 +119,11 @@
                                     <ul id="sales-list" class="h-auto max-h-52 pr-1.5 overflow-y-scroll custom-scrollbar space-y-3 my-4 print:!h-fit print:!overflow-clip">
                                         
                                         <button @click.prevent="addSale()" id="add-sale-button"
-                                        class="text-gray-900 text-lg w-full gap-2 px-7 py-2.5 me-2focus:outline-none bg-white font-medium  rounded-lg border
+                                        class="text-gray-900 text-lg w-full gap-2 px-7 py-2.5 mt-3 focus:outline-none bg-white font-medium  rounded-lg border
                                         border-gray-200 hover:bg-gray-100 hover:text-cyan-700 focus:z-10 focus:ring-4 focus:ring-gray-100 
                                         dark:focus:ring-gray-700 dark:bg-gray-700 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white
-                                        dark:hover:bg-gray-700">
+                                        dark:hover:bg-gray-700"
+                                        :class="{'pointer-events-none opacity-50' : Alpine.store('receiptsState').receiptsState == GlobalStates.ADDING}">
                                             Add item
                                             <i class="fa-solid fa-plus"></i>
                                         </button>
@@ -158,7 +159,7 @@
                             </div>
                             <div class="flex mt-3 py-4 justify-between">
                                 <button data-modal-hide="add-receipt-modal"
-                                class="text-gray-900 text-lg w-1/3 gap-2 px-7 py-2.5 me-2focus:outline-none bg-white font-medium rounded-lg border
+                                class="text-gray-900 text-lg w-1/3 gap-2 px-7 py-2.5 me-2 focus:outline-none bg-white font-medium rounded-lg border
                                 border-gray-200 hover:bg-gray-100 hover:text-cyan-700 focus:z-10 focus:ring-4 focus:ring-gray-100 
                                 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white
                                 dark:hover:bg-gray-700">
