sales addition and calculation working properly

--- a/app/templates/pages/receipts.html
+++ b/app/templates/pages/receipts.html
@@ -148,10 +148,10 @@
                                         <span>Customer card reduction:</span><span class="">-$0.00</span>
                                     </div>
                                     <div class="mb-2 flex justify-between items-center">
-                                        <span>Taxes & Fees</span><span class="">$0.36</span>
+                                        <span>Taxes & Fees</span><span class="" x-text="'$' + taxesSum"></span>
                                     </div>
                                     <div class="flex justify-between items-center">
-                                        <span class="text-lg font-medium">Total</span><span class="text-lg font-medium">$12.95</span>
+                                        <span class="text-lg font-medium">Total</span><span class="text-lg font-medium" x-text="'$' + totalPrice"></span>
                                     </div>
                                     </div>
                                 </div>
