adding receipt UI finished

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -51,6 +51,7 @@
     <script type="module" src="{{ url_for('static', filename='js/loginHandler.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/dropdownSearch.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/dropdownGoodsSearch.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/dropdownCustomerSearch.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/createRow.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/createCard.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/tableInteractions.js') }}"></script>
