--- a/app/templates/pages/receipts.html
+++ b/app/templates/pages/receipts.html
@@ -109,8 +109,38 @@
                                         </h1>
                                     
                                         <div class="flex flex-row justify-between">
-                                            <span class="text-gray-600 dark:text-gray-200 text-xs" x-text="'Cashier ID: ' + user.ID"></span>
-                                            <span class="text-gray-600 dark:text-gray-200 text-xs">Customer ID: 000001</span>
+                                            <span class="text-gray-600 dark:text-gray-200 text-sm content-center" x-text="'Cashier ID: ' + user.ID"></span>
+                                            
+                                            <div x-data="dropdownCustomerSearch()">
+                                                <button @click.prevent="toggleDropdown"
+                                                class="inline-flex justify-center w-full h-full text-xs font-medium text-gray-700 
+                                                bg-gray-50 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:border-blue-500 
+                                                focus:ring-blue-500 p-2.5 dark:bg-gray-700 dark:border-gray-600 
+                                                dark:placeholder-gray-400 dark:text-white dark:focus:ring-cyan-500 dark:focus:border-cyan-500">
+                                                <span x-text="selectedOption != null ? selectedOption['Name'] + selectedOption['Surname'] : 'Select customer'"></span>
+                                                <svg class="w-5 h-5 ml-2 -mr-1" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                                                    <path fill-rule="evenodd" d="M6.293 9.293a1 1 0 011.414 0L10 11.586l2.293-2.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd" />
+                                                </svg>
+                                                </button>
+                                                <div x-show="isOpen" @click.away="isOpen = false" 
+                                                class="absolute z-40 w-1/3 mt-2ring-1 ring-black ring-opacity-5 p-1 space-y-1 bg-white 
+                                                divide-y divide-gray-100 dark:divide-gray-600 rounded-lg shadow dark:bg-gray-700 block">
+                                                <input x-model="searchTerm" class="bg-gray-50 border border-gray-300 text-gray-900 
+                                                text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 
+                                                dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white 
+                                                dark:focus:ring-cyan-500 dark:focus:border-cyan-500" placeholder="Search items" autocomplete="off">
+                                                <div class="overflow-auto max-h-40 custom-scrollbar">
+                                                    <template x-for="option in filteredOptions()" :key="option['ID']">
+                                                        <a @click.prevent="selectOption(option)" href="javascript:void(0);" class="px-4 py-2 text-gray-700 dark:text-white 
+                                                        cursor-pointer rounded-md inline-flex w-full hover:bg-gray-100 dark:hover:bg-gray-600 
+                                                        dark:hover:text-white">
+                                                            <span class="text-xs" x-text="option['Name'] + ' ' + option['Surname'] +' : ' + option['Percent'] + '%'"></span>
+                                                        </a>
+                                                    </template>
+                                                </div>
+                                                </div>
+                                            </div>
+
                                         </div>
                 
                                     </div>
@@ -145,7 +175,7 @@
                                     <hr class="mb-4">
                 
                                     <div class="flex justify-between items-center">
-                                        <span>Customer card reduction:</span><span class="">-$0.00</span>
+                                        <span>Customer card reduction:</span><span x-text="'-$' + customerDiscount"></span>
                                     </div>
                                     <div class="mb-2 flex justify-between items-center">
                                         <span>Taxes & Fees</span><span class="" x-text="'$' + taxesSum"></span>
