--- a/app/templates/pages/receipts.html
+++ b/app/templates/pages/receipts.html
@@ -1,58 +1,57 @@
 {% extends "layout.html" %}
 
-{% block title %}Staff and clients{% endblock %}
+{% block title %}Receipts{% endblock %}
 
 {% block content %}
-<div class="flex flex-col" x-data="receiptsInteractions('{{active_tab}}', {{session['user']}})">
+<div class="flex flex-col" x-data="receiptsInteractions('{{active_tab}}', {{receipts}}, {{session['user']}})">
     
     <div class="flex flex-col w-full pt-5 pb-8 items-center justify-center">
         <div class="fixed print:!hidden inset-x-6 top-[-5rem] -z-10 transform-gpu overflow-hidden blur-3xl " aria-hidden="true">
         <div class="relative left-1/6 -z-10 aspect-[1155/678] w-[36.125rem] max-w-none -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-purple-400 via-[#2bb3d3] to-[#0aaa9d] opacity-30 sm:left-[calc(50%-40rem)] sm:w-[72.1875rem] bg-[length:300%_auto] animate-blobs" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
         </div>
 
-        <div class="w-4/5 grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 justify-center print:w-full print:portrait:!grid-cols-1">
+        <div class="w-4/5 grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 justify-center print:w-1/2 print:portrait:!grid-cols-1">
             <div class="col-span-full">
                 {% include 'components/_receipts_topbar.html' %}
             </div>        
 
 
-            {% for receipt in receipts %}
+            <template x-for="receipt in receipts">
             <div class="w-full max-w-lg">
                 <div class="rounded-lg shadow-lg p-12 text-xs sm:mx-0 bg-white border border-gray-200 dark:bg-custom-gradient dark:border-gray-700">
                 <div>
                     <div class="flex flex-col">
-                        <p class="text-gray-600 dark:text-gray-200 text-xs">30.03.24</p>
+                        <p class="text-gray-600 dark:text-gray-200 text-xs" x-text="receipt.Print_Date"></p>
 
                         <h1 class="text-gray-800 dark:text-white text-xl font-medium mb-2 flex flex-wrap items-center justify-between">
                             <span>
                                 Receipt
                             </span>
-                            <span>
-                                #123456789
+                            <span x-text="'#' + receipt.Check_Num">
                             </span>
                         </h1>
                     
                         <div class="flex flex-row justify-between">
-                            <span class="text-gray-600 dark:text-gray-200 text-xs">Cashier ID: 000001</span>
-                            <span class="text-gray-600 dark:text-gray-200 text-xs">Customer ID: 000001</span>
+                            <span class="text-gray-600 dark:text-gray-200 text-xs" x-text="'Cashier ID: ' + receipt.Employee_ID"></span>
+                            <span class="text-gray-600 dark:text-gray-200 text-xs" x-text="'Customer ID: ' + receipt.Customer_Card"></span>
                         </div>
 
                     </div>
                     <hr class="mt-4">
                     <div class="dark:text-gray-200">
                     <ul class="h-52 pr-1.5 overflow-y-scroll custom-scrollbar space-y-3 my-4 print:!h-fit print:!overflow-clip">
-                        {% for i in range(19) %}
-                        <li>
-                        <div class="flex justify-between items-center">
-                            <span class="font-medium text-base">Potatoes</span>
-                            <span class="text-base font-medium">$2.69</span>
-                        </div>
-                        <div class="flex justify-between items-center">
-                            <span>*Quantity:</span>
-                            <span>2 kg</span>
-                        </div>
-                        </li>
-                        {% endfor %}
+                        <template x-for="sale in receipt.Products">
+                            <li>
+                                <div class="flex justify-between items-center">
+                                    <span class="font-medium text-base" x-text="sale.Product_Name"></span>
+                                    <span class="text-base font-medium" x-text="'$' + sale.Product_Price"></span>
+                                </div>
+                                <div class="flex justify-between items-center">
+                                    <span>*Quantity:</span>
+                                    <span x-text="sale.Amount + ' pieces'"></span>
+                                </div>
+                            </li>
+                        </template>
                     </ul>
                     
                     <hr class="mb-4">
@@ -61,16 +60,16 @@
                         <span>Customer card reduction:</span><span class="">-$0.00</span>
                     </div>
                     <div class="mb-2 flex justify-between items-center">
-                        <span>Taxes & Fees</span><span class="">$0.36</span>
+                        <span>Taxes & Fees</span><span x-text="'$' + parseFloat(receipt.Vat)"></span>
                     </div>
                     <div class="flex justify-between items-center">
-                        <span class="text-lg font-medium">Total</span><span class="text-lg font-medium">$12.95</span>
+                        <span class="text-lg font-medium">Total</span><span class="text-lg font-medium" x-text="'$' + parseFloat(receipt.Sum_Total)"></span>
                     </div>
                     </div>
                 </div>
                 </div>
             </div>
-            {% endfor %}
+            </template>
 
 
             <!-- {% include 'components/_receipt.html' %} -->
@@ -103,8 +102,8 @@
                                             <span>
                                                 Receipt
                                             </span>
-                                            <span>
-                                                #123456789
+                                            <span class="text-gray-600 dark:text-gray-300">
+                                                ID is generated automatically
                                             </span>
                                         </h1>
                                     
@@ -157,19 +156,6 @@
                                             Add item
                                             <i class="fa-solid fa-plus"></i>
                                         </button>
-                                        
-                                        <!-- {% for i in range(19) %}
-                                        <li>
-                                        <div class="flex justify-between items-center">
-                                            <span class="font-medium text-base">Potatoes</span>
-                                            <span class="text-base font-medium">$2.69</span>
-                                        </div>
-                                        <div class="flex justify-between items-center">
-                                            <span>*Quantity:</span>
-                                            <span>2 kg</span>
-                                        </div>
-                                        </li>
-                                        {% endfor %} -->
                                     </ul>
                                     
                                     <hr class="mb-4">
@@ -196,7 +182,7 @@
                                     Cancel
                                     <i class="fa-solid fa-xmark"></i>
                                 </button>
-                                <button @click=""
+                                <button @click.prevent="createReceipt"
                                 class="text-white text-lg w-1/3 gap-2 bg-cyan-600 hover:bg-sky-600 
                                 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg
                                 px-7 py-2.5 me-2 dark:bg-cyan-800 dark:hover:bg-cyan-900 
