--- a/app/templates/pages/receipts.html
+++ b/app/templates/pages/receipts.html
@@ -16,12 +16,22 @@
             </div>        
 
 
-            <template x-for="receipt in receipts">
+            <template x-for="receipt in $store.receiptsState.receipts">
             <div class="w-full max-w-lg">
                 <div class="rounded-lg shadow-lg p-12 text-xs sm:mx-0 bg-white border border-gray-200 dark:bg-custom-gradient dark:border-gray-700">
                 <div>
                     <div class="flex flex-col">
-                        <p class="text-gray-600 dark:text-gray-200 text-xs" x-text="receipt.Print_Date"></p>
+                        <div class="flex flex-row justify-between">
+                            <span class="text-gray-600 dark:text-gray-200 text-xs" x-text="receipt.Print_Date"></span>
+
+                            <input
+                            type="checkbox"
+                            x-cloak x-show="$store.receiptsState.receiptsState === GlobalStates.SELECTING"
+                            x-model="$store.receiptsState.selectedItems"
+                            :value="receipt.Check_Num"
+                            class="w-5 h-5 mb-3 text-cyan-600 bg-gray-100 border-gray-300 rounded focus:ring-cyan-500 dark:focus:ring-cyan-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
+                            >
+                        </div>
 
                         <h1 class="text-gray-800 dark:text-white text-xl font-medium mb-2 flex flex-wrap items-center justify-between">
                             <span>
@@ -70,10 +80,6 @@
                 </div>
             </div>
             </template>
-
-
-            <!-- {% include 'components/_receipt.html' %} -->
-            
         </div>
 
         <div x-data="addReceipt(user)" id="add-receipt-modal" data-modal-backdrop="static" tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
@@ -102,7 +108,7 @@
                                             <span>
                                                 Receipt
                                             </span>
-                                            <span class="text-gray-600 dark:text-gray-300">
+                                            <span class="text-gray-600 dark:text-gray-300 text-base">
                                                 ID is generated automatically
                                             </span>
                                         </h1>
@@ -174,7 +180,7 @@
                                 </div>
                             </div>
                             <div class="flex mt-3 py-4 justify-between">
-                                <button data-modal-hide="add-receipt-modal"
+                                <button type="button" data-modal-hide="add-receipt-modal"
                                 class="text-gray-900 text-lg w-1/3 gap-2 px-7 py-2.5 me-2 focus:outline-none bg-white font-medium rounded-lg border
                                 border-gray-200 hover:bg-gray-100 hover:text-cyan-700 focus:z-10 focus:ring-4 focus:ring-gray-100 
                                 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white
