request 1 and 2 pages

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -48,6 +48,7 @@
     <script type="module" src="{{ url_for('static', filename='js/textScramble.js') }}" defer></script>
     <script type="module" src="{{ url_for('static', filename='js/sendRequest.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/navbar.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/request1.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/loginHandler.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/dropdownSearch.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/dropdownGoodsSearch.js') }}"></script>
