--- a/app/templates/pages/receipts.html
+++ b/app/templates/pages/receipts.html
@@ -180,7 +180,7 @@
                                 </div>
                             </div>
                             <div class="flex mt-3 py-4 justify-between">
-                                <button type="button" data-modal-hide="add-receipt-modal"
+                                <button type="button" @click.prevent="cancelReceipt" data-modal-hide="add-receipt-modal"
                                 class="text-gray-900 text-lg w-1/3 gap-2 px-7 py-2.5 me-2 focus:outline-none bg-white font-medium rounded-lg border
                                 border-gray-200 hover:bg-gray-100 hover:text-cyan-700 focus:z-10 focus:ring-4 focus:ring-gray-100 
                                 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white
