--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -36,6 +36,7 @@
         {% endblock %}
 
         {% include 'components/_change_password_modal.html' %}
+        {% include 'components/_show_profile_modal.html' %}
         
         {% block scripts %}
         
