--- a/app/templates/components/_header.html
+++ b/app/templates/components/_header.html
@@ -94,7 +94,7 @@
               </div>
               <ul class="py-2" aria-labelledby="user-menu-button">
                 <li>
-                  <a href="javascript:void(0);" class="block px-4 py-2 text-base text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Dashboard</a>
+                  <a href="javascript:void(0);" data-modal-target="show-profile-modal" data-modal-toggle="show-profile-modal" class="block px-4 py-2 text-base text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Profile</a>
                 </li>
                 <li>
                   <a href="javascript:void(0);" class="block px-4 py-2 text-base text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Settings</a>
