--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -70,6 +70,8 @@
     <script type="module" src="{{ url_for('static', filename='js/addReceipt.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/numberSpinner.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/dateSearchWithFilters.js') }}"></script>
+        <script type="module" src="{{ url_for('static', filename='js/request2.js') }}"></script>
+
 
     
     
