custom query (Task complete)

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -49,7 +49,7 @@
     <script type="module" src="{{ url_for('static', filename='js/textScramble.js') }}" defer></script>
     <script type="module" src="{{ url_for('static', filename='js/sendRequest.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/navbar.js') }}"></script>
-    <script type="module" src="{{ url_for('static', filename='js/request1.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/requests.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/loginHandler.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/dropdownSearch.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/dropdownGoodsSearch.js') }}"></script>
@@ -71,6 +71,7 @@
     <script type="module" src="{{ url_for('static', filename='js/addReceipt.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/numberSpinner.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/dateSearchWithFilters.js') }}"></script>
+
 
     
     
