Custom queries minor improvements

--- a/app/templates/components/_requests_table.html
+++ b/app/templates/components/_requests_table.html
@@ -3,13 +3,13 @@
     <caption x-cloak class="p-5 text-lg font-semibold text-left rtl:text-right text-gray-900 bg-white dark:text-white dark:bg-gray-800">
         <h3 class="m-2">Description of the query:</h3>
         <template x-if="activeTab == 'request1'">
-            <p class="m-2 text-base text-gray-900 dark:text-gray-300">Display customer card data, their total purchase amount, their average purchase amount,
-                the UPC, and the name of the product they purchased most often.
+            <p class="m-2 text-base text-gray-900 dark:text-gray-300">Display customer card customer details, their total purchases,
+                their average purchases, the UPC, and the name of the product they bought most often for customers who bought in total more than the specified value of money.
             </p>
         </template>
         <template x-if="activeTab == 'request2'">
             <p class="m-2 text-base text-gray-900 dark:text-gray-300">
-                Display the data of buyers with a customer card who purchased each product from a given product category.
+                Display categories from which all products are in stock in the store.
             </p>
         </template>
         <form class="w-1/2 m-2 mb-0" x-cloak x-show="activeTab == 'request1'">
