--- a/app/templates/pages/requests.html
+++ b/app/templates/pages/requests.html
@@ -16,12 +16,12 @@
                 <li class="w-full">
                     <a id="request-1-tab" href="{{ url_for('requests.request1') }}" data-tabs-target="#request-1" aria-controls="request-1" 
                     aria-selected="{{ 'true' if active_tab == 'request1' else 'false' }}" class="inline-block w-full p-4 aria-selected:text-cyan-600 focus:text-cyan-600 hover:!text-cyan-700 rounded-ss-lg bg-gray-50 
-                    hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600 dark:hover:!text-cyan-500">Request 1</a>
+                    hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600 dark:hover:!text-cyan-500">Statistics on customers</a>
                 </li>
                 <li class="w-full">
                     <a id="request-2-tab" href="{{ url_for('requests.request2') }}" data-tabs-target="#request-2" aria-controls="request-2" aria-selected="{{ 'true' if active_tab == 'request2' else 'false' }}"
                      class="inline-block w-full p-4 aria-selected:text-cyan-600 focus:text-cyan-600 hover:!text-cyan-700 bg-gray-50 
-                     hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600 dark:hover:!text-cyan-500">Request 2</a>
+                     hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600 dark:hover:!text-cyan-500">Categories in stock</a>
                 </li>
             </ul>
             <div id="fullWidthTabContent" class="border-t border-gray-200 dark:border-gray-600">
