--- a/app/templates/components/_data_table.html
+++ b/app/templates/components/_data_table.html
@@ -61,7 +61,7 @@
                 <template x-for="[key, value] in Object.entries(row)" :key="key">
                     <template x-if="key !== 'editing' && rawColumns[key] !== 'HIDDEN'">
                         <td class="px-6 py-4">
-                            <span x-show="!row.editing" x-text="value" class="text-scramble" :data-key="key"></span>
+                            <span x-show="!row.editing" x-text="value != null ? value : '-'" class="text-scramble" :data-key="key"></span>
                             <template x-if="rawColumns[key] === 'PK' && row.editing">
                                 <span x-show="row.editing" x-text="value" class="text-scramble" :data-key="key"></span>
                             </template>
